# Portfolio

./: .env.example  .env.production  .env.template  .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  README.md  SECURITY.md  SETUP.md  admin-test.html  app-django.js  app.js  env-config.js  index.html  package.json  quick_test.py  security_test.py  start-backend.bat  start-backend.ps1  start-frontend.bat  start-frontend.ps1  style.css  test-portfolio.html  test_auth.py
backend/: .env  .env.example  .env.production  README.md  STATIC_FILES_FIX.md  collect_static.py  db.sqlite3  pyproject.toml
backend/portfolio/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/portfolio/management/commands/: init_portfolio.py
backend/portfolio/migrations/: 0001_initial.py
backend/portfolio_backend/: settings.py  urls.py
