[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "django>=5.2.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "requests>=2.31.0",
]
